fix: titles to title case

--- a/docs/key-topics/headless-cms/content-models-explained.mdx
+++ b/docs/key-topics/headless-cms/content-models-explained.mdx
@@ -1,7 +1,7 @@
 ---
 id: content-models-explained
-title: Content models explained
-sidebar_label: Content models explained
+title: Content Models Explained
+sidebar_label: Content Models Explained
 keywords: ["webiny", "content model", "headless cms", "data mapping", "dynamodb"]
 description: A deep-dive into how data models are mapped and stored to the database
 ---
