--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
@@ -1,7 +1,7 @@
 ---
 id: content-entry
-title: Content entry lifecycle hooks
-sidebar_label: Content entry
+title: Content Entry Lifecycle Hooks
+sidebar_label: Content Entry
 keywords: ["webiny", "content entry", "headless cms", "lifecycle hooks", "plugins"]
 description: An explanation of lifecycle hooks plugins for content entries
 ---
