--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-model.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-model.mdx
@@ -1,7 +1,7 @@
 ---
 id: content-model
-title: Content model lifecycle hooks
-sidebar_label: Content model
+title: Content Model Lifecycle Hooks
+sidebar_label: Content Model
 keywords: ["webiny", "content model", "headless cms", "lifecycle hooks", "plugins"]
 description: An explanation of lifecycle hooks plugins for content models
 ---
