--- a/docs/references/headless-cms/api/index.mdx
+++ b/docs/references/headless-cms/api/index.mdx
@@ -1,6 +1,6 @@
 ---
 id: index
-title: Headless CMS API references
+title: Headless CMS API References
 sidebar_label: API
 keywords: ["webiny", "references"]
 ---
