fix: use title case

--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -1,7 +1,7 @@
 ---
 id: project-organization
-title: Project organization
-sidebar_label: Project organization
+title: Project Organization
+sidebar_label: Project Organization
 keywords: ["webiny", "project", "organization", "packages", "applications"]
 description: Learn about fundamental organizational units of every Webiny project.
 ---
