fix: add warning for windows users and a new troubleshooting question

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -8,6 +8,7 @@ description: Learn how to create a new Webiny project and deploy it into your AW
 
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
+import { isWindows } from "react-device-detect";
 
 :::tip WHAT YOU’LL LEARN
 - how to create a brand new Webiny project
@@ -33,6 +34,17 @@ Before proceeding, make sure you have the following:
 
 - With the mentioned software, you also must have a valid AWS Account and user credentials set up on your system. Please [follow this guide](/docs/how-to-guides/deployment/configure-aws-credentials) if you need assistance in that regard.
 
+
+<>
+{isWindows &&
+<div className="admonition admonition-caution alert alert--warning">
+    <h5>Windows users - terminal</h5>
+    For Windows users, we recommend using the <a href="https://github.com/microsoft/terminal">Windows Terminal</a> instead
+    of the other alternatives like <a href="https://www.atlassian.com/git/tutorials/git-bash">gitbash</a>, <code>cmd</code>,
+    or even <a href="https://en.wikipedia.org/wiki/MinGW">MinGW</a>. These are known to cause different issues, which ultimately prevent you from finishing the project setup successfully.
+</div>}
+</>
+
 ---
 
 ## Project setup
@@ -45,19 +57,19 @@ npx create-webiny-project@beta my-new-project --tag beta
 
 From there, follow the on-screen setup instructions, which includes answering a couple of project-related questions, and doing your first deployment.
 
-### VPC or no-VPC - what should you choose?
+### Custom or the default VPC - what should you choose?
 
-During the setup, one of the questions that shows up is should your new project be deployed in a [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) or not. The answer to that question depends on your needs.
+During the setup, one of the questions that shows up is should your new project be deployed in a custom [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) or the default one. The answer to that question depends on your needs.
 
-If you're deploying this for development purposes, or you're working on a project prototype, it's reasonable to use a non-VPC deployment. This is because all of the cloud resources that are needed for this setup are [free-tier](https://aws.amazon.com/free/) eligible. And, having a bit less secure system probably doesn't impose a problem at this point in time.
+If you're deploying this for development purposes, or you're working on a project prototype, it's reasonable to use the default VPC deployment. This is because all of the cloud resources that are needed for this setup are [free-tier](https://aws.amazon.com/free/) eligible. And, having a bit less secure system probably doesn't impose a problem at this point in time.
 
-On the other hand, if we're talking about production deployment, then deploying resources inside of a VPC is recommended. Although this does incur a cost, it significantly improves your project's security posture.
+On the other hand, if we're talking about production deployment, then deploying resources inside of a custom VPC is recommended. Although this does incur a cost, it significantly improves your project's security posture.
 
 :::info Still not sure?
 If you're still not sure what to choose, go for the no-VPC setup. If needed, you can still do the switch down the road.
 :::
 
-:::info Cloud Infrastructure
+:::tip Cloud Infrastructure
 Learn what gets deployed into the cloud (your AWS account) and how it all works in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
 :::
 
@@ -112,3 +124,7 @@ export GODEBUG=asyncpreemptoff=1
 ```
 
 Please try executing the command in your terminal, and run the deployment again. If this does not help, feel free to [ask](https://www.webiny.com/slack) for additional help.
+
+#### Pulumi is throwing a `syscall.loadsystemlibrary` exception
+There could be various reasons why this error was thrown. But, if deploying from a Windows machine, we've seen that it could be
+caused by an anti-virus software that you might have installed on your machine. Our suggestion is to try to temporary disable it and see if that produces any positive outcome.
