feat: create introduction to development workflows section

--- a/docs/how-to-guides/development-workflows/introduction.mdx
+++ b/docs/how-to-guides/development-workflows/introduction.mdx
@@ -2,24 +2,28 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["webiny", "development", "workflows"]
-description: Learn how to establish a CI/CD pipeline for your Webiny project.
+keywords: ["webiny", "development", "workflows", "introduction"]
+description: Introduction to Development Workflows guides section.
 ---
+
 :::tip What you'll learn
-- one
-- two
+- What the **Development Workflows** section explains
 :::
 
 ## Project Development
 
-This section explains different workflows and approaches that you may want to incorporate into your project development process.
+The **Development Workflows** section explains different workflows and approaches that you may want to incorporate into your project development process.
 
-Have in mind that project development process doesn't just assume writing code. This process always involves many other subprocesses, which are equally if not more important. Some of the subprocesses are:
+It's important to know that the project development process doesn't just entail writing code. It also involves many other subprocesses, which are equally if not more important, for example:
 
-- working in teams
-- branching strategies
-- deployments
-- CI/CD
+- code branching strategies
+- continuous integration and deployment (CI/CD)
+- teams organization
 - monitoring and observability
 - system backups
 
+Knowing how these processes work and how to set them up can make a significant impact on the success of the project you're working on.
+
+:::info
+The workflows and approaches we cover in the following sections may not always work for you. But, they do represent a solid foundation on which you can expand on if need be.
+:::
