fix: change "id" property

--- a/docs/how-to-guides/development-workflows/logging.mdx
+++ b/docs/how-to-guides/development-workflows/logging.mdx
@@ -1,7 +1,7 @@
 ---
-id: development
-title: Development
-sidebar_label: Development
+id: logging
+title: Logging
+sidebar_label: Logging
 keywords: ["webiny", "development", "unit", "e2e", "tests"]
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
