--- a/docs/how-to-guides/development-workflows/observability.mdx
+++ b/docs/how-to-guides/development-workflows/observability.mdx
@@ -1,7 +1,7 @@
 ---
-id: development
-title: Development
-sidebar_label: Development
+id: observability
+title: Observability
+sidebar_label: Observability
 keywords: ["webiny", "development", "unit", "e2e", "tests"]
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
