fix: move pb articles under serverless cms

--- a/docs/key-topics/serverless-cms/page-builder/responsive-mode.mdx
+++ b/docs/key-topics/serverless-cms/page-builder/responsive-mode.mdx
@@ -6,7 +6,7 @@ keywords: ["webiny", "Page Builder", "responsive"]
 description: How does the responsive mode works in Page Builder editor.
 ---
 
-import Theme from "../../mdxComponents/theme";
+import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
@@ -17,7 +17,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 In Webiny `v5` the Page Builder editor comes with responsive mode which helps building a responsive website straight from the editor.
 
 <img
-  src={require("../assets/page-builder/pb-responsive-mode-toolbar.png").default}
+  src={require("../../assets/page-builder/pb-responsive-mode-toolbar.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Page Builder toolbar"
@@ -43,7 +43,7 @@ Not all style settings are sive.
 Whether a style setting is responsive or not is denoted by the device icon as shown in the image below:
 
 <img
-  src={require("../assets/page-builder/pb-sidebar-device-icon.png").default}
+  src={require("../../assets/page-builder/pb-sidebar-device-icon.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Page Builder sidebar"
@@ -61,7 +61,7 @@ It also apply to all smaller breakpoints i.e `tablet`, `mobile-landscape` and `m
 
 <video controls style={{ width: "100%" }}>
   <source
-    src={require("../assets/page-builder/pb-responsive-mode-desktop.mp4").default}
+    src={require("../../assets/page-builder/pb-responsive-mode-desktop.mp4").default}
     type="video/mp4"
   />
   Sorry, your browser doesn't support embedded videos.
@@ -74,7 +74,7 @@ and making ired changes to style settings via sidebar. Continuing our previous e
 
 <video controls style={{ width: "100%" }}>
   <source
-    src={require("../assets/page-builder/pb-responsive-mode-mobile.mp4").default}
+    src={require("../../assets/page-builder/pb-responsive-mode-mobile.mp4").default}
     type="video/mp4"
   />
   Sorry, your browser doesn't support embedded videos.
