wip: development workflows

--- a/docs/how-to-guides/development-workflows/cloud-infrastructure-state.mdx
+++ b/docs/how-to-guides/development-workflows/cloud-infrastructure-state.mdx
@@ -11,3 +11,5 @@ description: Learn how to establish a CI/CD pipeline for your Webiny project.
 :::
 
 ## Overview
+
+mozda ovdje negdje ono sa --preview flagom staviti - da si ljudi to stave u PR-ovima obavezno
