--- a/docs/how-to-guides/development-workflows/development.mdx
+++ b/docs/how-to-guides/development-workflows/development.mdx
@@ -11,3 +11,9 @@ description: Learn how to establish a CI/CD pipeline for your Webiny project.
 :::
 
 ## Overview
+
+- development in cloud - no local development
+
+- testing
+
+E2E - https://dev.to/theburningmonk/why-you-should-use-temporary-stacks-when-you-do-serverless-2ai0
