--- a/docs/how-to-guides/development-workflows/introduction.mdx
+++ b/docs/how-to-guides/development-workflows/introduction.mdx
@@ -16,6 +16,7 @@ The **Development Workflows** section explains different workflows and approache
 
 It's important to know that the project development process doesn't just entail writing code. It also involves many other subprocesses, which are equally if not more important, for example:
 
+- testing
 - code branching strategies
 - continuous integration and deployment (CI/CD)
 - teams organization
