fix: adjust message for windows terminals

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -34,14 +34,11 @@ Before proceeding, make sure you have the following:
 
 - With the mentioned software, you also must have a valid AWS Account and user credentials set up on your system. Please [follow this guide](/docs/how-to-guides/deployment/configure-aws-credentials) if you need assistance in that regard.
 
-
 <>
 {isWindows &&
 <div className="admonition admonition-caution alert alert--warning">
     <h5>Windows users - terminal</h5>
-    For Windows users, we recommend using the <a href="https://github.com/microsoft/terminal">Windows Terminal</a> instead
-    of the other alternatives like <a href="https://www.atlassian.com/git/tutorials/git-bash">gitbash</a>, <code>cmd</code>,
-    or even <a href="https://en.wikipedia.org/wiki/MinGW">MinGW</a>. These are known to cause different issues, which ultimately prevent you from finishing the project setup successfully.
+    For Windows users, we recommend using the <a href="https://github.com/microsoft/terminal">Windows Terminal</a> as a host for your favorite terminal, simply because it provides the best interactive experience.
 </div>}
 </>
 
