fix: update versions section

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -21,18 +21,20 @@ import { isWindows } from "react-device-detect";
 
 Before proceeding, make sure you have the following:
 
-#### Node.js >= 12.0.0
+#### Node.js > 12
 
-- If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/).
+- any version equal or greater than **12**
+- If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/)
 
-#### yarn < 2.0
+#### yarn ^1.22.0 || ^2
 
-- Follow the [official instructions](https://yarnpkg.com/en/docs/install).
-- Alternatively, run the `npm install yarn -g` command
+- Webiny works with both yarn versions [1 (classic)]((https://yarnpkg.com/en/docs/install)) and [2 (berry)](https://yarnpkg.com/)
+- for version 1 - **1.22.0** or later is required
+- for version 2 - **2.0.0** or later is required
 
-#### AWS account and configured credentials
+#### AWS account and user credentials
 
-- With the mentioned software, you also must have a valid AWS Account and user credentials set up on your system. Please [follow this guide](/docs/how-to-guides/deployment/configure-aws-credentials) if you need assistance in that regard.
+- in order to deploy Webiny, you must have a valid [AWS account and user credentials](/docs/how-to-guides/deployment/configure-aws-credentials) set up on your system
 
 <>
 {isWindows &&
@@ -84,14 +86,21 @@ This builds all the code and deploys it to your AWS account, along with the nece
 
 Note that the first deployment can take up to 20 minutes! So, even though it might look nothing is happening in the terminal, please be patient and let the process finish. If something went wrong, an error will be shown.
 
+
+Finally, once the deployment has been done, you are presented with the URL over which you can access your Admin Area, and finish the installation.
+
 :::info What is deployed into my AWS account?
 To learn more about the cloud architecture and the resources that are deployed into your AWS account, click here.
 :::
 
-Finally, once the deployment has been done, you are presented with the URL over which you can access your Admin Area, and finish the installation.
-
 :::tip Misplaced Admin area URL?
 Running the `yarn webiny info` command in your Webiny project folder will give you all of the relevant project URLs.
+:::
+
+:::caution Telemetry
+Please note that, by default, Webiny collects anonymous usage information, which is exclusively used for improving the product and understanding usage patterns. Please take a look at our [Telemetry](https://www.webiny.com/telemetry/) page for more information on this subject.
+
+If, at any point in time, you wish to disable this behaviour, you can do it with the Webiny CLI, by running the following command: `yarn webiny disable-tracking`.
 :::
 
 ## Troubleshooting
