--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -105,6 +105,12 @@ If, at any point in time, you wish to disable this behaviour, you can do it with
 
 ## Troubleshooting
 
+#### Deploying my project takes a long time to finish
+
+We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get deployed reasonably fast, this service can take anywhere from 15 to 30 minutes to become ready.
+
+Unfortunately, this is a well-known issue for quite some time, and until the present, there haven't been any positive improvements.
+
 #### The AWS Access Key Id needs a subscription for the service
 
 In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
