feat: add ES taking too long to deploy questions

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -88,3 +88,11 @@ yarn webiny app deploy api --env dev
 yarn webiny app deploy apps/admin --env dev
 yarn webiny app deploy apps/site --env dev
 ```
+
+## Troubleshooting
+
+#### Deploying my project takes a long time to finish
+
+We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get deployed reasonably fast, this service can take anywhere from 15 to 30 minutes to become ready.
+
+Unfortunately, this is a well-known issue for quite some time, and until the present, there haven't been any positive improvements.
