--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -47,3 +47,11 @@ yarn webiny app destroy api --env dev
 yarn webiny app destroy apps/admin --env dev
 yarn webiny app destroy apps/site --env dev
 ```
+
+## Troubleshooting
+
+#### Destroying my project takes a long time to finish
+
+We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get destroyed reasonably fast, this service can take anywhere from 15 to 30 minutes to destroy itself.
+
+Unfortunately, this is a well-known issue for quite some time. We've even seen cases where the service is stuck in user's account [for days](https://forums.aws.amazon.com/thread.jspa?threadID=233859). Until the present, there haven't been any positive improvements on the subject.
