--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -28,7 +28,7 @@ Before proceeding, make sure you have the following:
 
 #### yarn ^1.22.0 || ^2
 
-- Webiny works with both yarn versions [1 (classic)]((https://yarnpkg.com/en/docs/install)) and [2 (berry)](https://yarnpkg.com/)
+- Webiny works with both yarn versions [1 (classic)](https://yarnpkg.com/en/docs/install) and [2 (berry)](https://yarnpkg.com/)
 - for version 1 - **1.22.0** or later is required
 - for version 2 - **2.0.0** or later is required
 
