fix: add image of installation wizard in admin area

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -89,6 +89,8 @@ Note that the first deployment can take up to 20 minutes! So, even though it mig
 
 Finally, once the deployment has been done, you are presented with the URL over which you can access your Admin Area, and finish the installation.
 
+![Admin Area - Installation Wizard](./install-webiny/installation-wizard.png)
+
 :::info What is deployed into my AWS account?
 To learn more about the cloud architecture and the resources that are deployed into your AWS account, click here.
 :::
