--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 id: introduction
-title: Webiny documentation
+title: Introduction
 sidebar_label: Introduction
 keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
 description: Documentation portal for Webiny serverless framework.
@@ -11,24 +11,44 @@ import Theme from "./mdxComponents/theme";
 import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
 
 :::danger Webiny Beta
-Webiny is currently in a beta stage. The documentation is not yet complete. We're publishing new docs every day and expect to reach the stable release during February. For any questions, please join our [community on slack](http://www.webiny.com/slack).
+Webiny is currently in a beta stage. The documentation is not yet complete. We're publishing new docs weekly and expect to reach the stable soon. For any questions, please join our [community on slack](http://www.webiny.com/slack).
 :::
 
 <Theme>
 
-Welcome! 👋 **Webiny** is a framework for building applications which run on top of the serverless infrastructure, like AWS Lambda. Webiny also includes several ready-made applications right out of the box.
+Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of serverless infrastructure, like AWS Lambda, DynamoDB, S3 and other.
 
----
+We believe that serverless is the future of development, but having tried ourselves building a solution using only serverless services we saw this is a challenging task. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure, but we found none that help you actually build one. 
 
-## New to Webiny?
-
-It's easy to get started, just follow the installation tutorial:
+You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
 <Link href="/docs/tutorials/install-webiny">
   <Button>Install Webiny</Button>
 </Link>
 
 ---
+
+## Our philosophy
+
+We have three main goals:
+- provide a solution where every aspect can be easily customized
+- amazing experience for developers
+- less abstraction and black boxes, more clarity
+
+
+
+Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo in side the Admin panel. Those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. 
+
+The great thing about Webiny's plugin system is that it's unified across the board, no matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same as well as the plugin interface. This makes it easy for anyone to pickup and understand how the whole system works, no matter frontend or backend.
+
+Webiny believes on unified developer experience. From first installing your project to deploying it and seeing it live all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything and making it hard to understand. Less abstra
+
+
+
+
+
+
+Coming from a background of first owning a web development agency and then spending years building enterprise projects we saw first hand how development is far from optimal. When serverless came to the scene, we were exatic, until we actually tried building something with it. 
 
 ## About Webiny
 
