--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -16,9 +16,9 @@ Webiny is currently in a beta stage. The documentation is not yet complete. We'r
 
 <Theme>
 
-Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of serverless infrastructure, like AWS Lambda, DynamoDB, S3 and other.
+Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. (multi-cloud support coming)
 
-We believe that serverless is the future of development, but having tried ourselves building a solution using only serverless services we saw this is a challenging task. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure, but we found none that help you actually build one. 
+We believe that serverless is the future of development, but having tried ourselves building a solution by using only serverless services we saw this is a challenging task. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. When it comes to building one, the existing tools are very limited and don't handle many use-cases.
 
 You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
@@ -28,53 +28,83 @@ You can read more about Webiny and our philosophy below, but in case you want to
 
 ---
 
-## Our philosophy
+## Our mission
 
-We have three main goals:
-- provide a solution where every aspect can be easily customized
-- amazing experience for developers
-- less abstraction and black boxes, more clarity
+> **Create the foundation for building serverless solutions. **
 
 
+## Webiny overview
 
-Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo in side the Admin panel. Those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. 
+With Webiny you can build:
 
-The great thing about Webiny's plugin system is that it's unified across the board, no matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same as well as the plugin interface. This makes it easy for anyone to pickup and understand how the whole system works, no matter frontend or backend.
+- Full-stack applications
+- Websites
+- GraphQL APIs
+- Microservices
 
-Webiny believes on unified developer experience. From first installing your project to deploying it and seeing it live all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything and making it hard to understand. Less abstra
+...all on top of the serverless infrastructure.
 
+### Technology
 
+Webiny is build using a modern development toolchain that makes the experience for developers much more enjoyable. Technologies Webiny uses:
 
+- [React](https://reactjs.org/)
+- [GraphQL](https://graphql.org/)
+- [Webpack](https://webpack.js.org/)
+- [Babel](https://babeljs.io)
+- [Typescript](https://www.typescriptlang.org)
+- [Jest](https://jestjs.io)
+- [ESLint](https://eslint.org)
+- [Yarn 2](http://yarnpkg.com)
+- [Pulumi](http://pulumi.com)
+- and more
 
+### Products
 
+Webiny comes with 2 products which are both installed when you setup 
+your instance. 
 
-Coming from a background of first owning a web development agency and then spending years building enterprise projects we saw first hand how development is far from optimal. When serverless came to the scene, we were exatic, until we actually tried building something with it. 
+#### Serverless Application framework
 
-## About Webiny
+This is the core of Webiny. It's a framework created specifically for building serverless solutions. The framework handles the deployment workflow, code bundling, project organization, and provides a ready-made architecture. It also includes an ACL module, GraphQL API and a Admin Panel SPA app. 
 
-**What's included, and what you can do with Webiny:**
+The goal of the framework is to provide a ready-made solution that you can use in a matter of minutes. Developers should no longer deal with the complexities that come with using serverless infrastructure. 
 
-<Grid gap={2} width={["100%", "50%", "25%"]}>
-  <Box>
-    <p>
-      <strong>With Webiny you can build:</strong>
-    </p>
-    <ul>
-      <li>Websites</li>
-      <li>Applications</li>
-      <li>GraphQL APIs</li>
-      <li>Microservices</li>
-    </ul>
-  </Box>
-</Grid>
+:::caution Cloud support
+At the moment Webiny only runs on the AWS cloud. It you wish to help us add support for another cloud provider, please see [this issue](https://github.com/webiny/webiny-js/issues/1150).
+:::
 
-**What Webiny is not, and what you can't use Webiny for:**
+#### Serverless CMS
 
-- Webiny is not a library that you can embed in other applications. Webiny is a standalone application. You can render Page Builder pages and Form Builder forms in 3rd party React apps. You can't embed the editors inside 3rd party apps.
-- At the moment you can't run Webiny on a different cloud provider, besides AWS. It you wish to add support for another cloud provider, please see [this issue](https://github.com/webiny/webiny-js/issues/1150).
+You might find it odd having a CMS as part of a framework. Our team spent more than 12 years building client-based solutions and many of the projects required some sort of a content management feature. In an ideal world we wanted to have a framework and a CMS combo, so we created one.
+
+Webiny Serverless CMS is created with our framework. It's the best real-life example of what you can build with it and it provides you with many samples and references for your own apps. 
+
+The Serverless CMS is completely optional. It's installed by default, but if not needed you can easily remove it.
+
+:::caution It's not a library
+Serverless CMS is not a library that you can embed in other applications. It's a standalone application.
+:::
 
 ---
 
+## Our philosophy
+
+Webiny is created with 3 main goals in mind:
+- provide a customizable solution
+- have an amazing developer experience
+- have less abstraction, more clarity
+
+Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo in side the Admin panel. Those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. An added benefit of this approach is that your plugins live outside the Webiny's core codebase, making upgrades much easier.
+
+Another great thing about the plugin system is that it's unified across the board. It doesn't matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same. This makes it easy for anyone to pickup and understand how the whole system works. 
+
+Webiny believes in having a great developer experience. From first installing your project to deploying it and seeing it live all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything, or making it hard to understand. Less abstraction means better understanding of the system.
+
+---
+
+
+<!---
 ## Learn Webiny
 
 :::caution Webiny Beta
@@ -114,6 +144,14 @@ Webiny Page Builder and Form Builder might look as simple drag and drop tools, b
 - [Create and publish a form](#!) <Badge variant="outline">Tutorial</Badge>
 - [Connect a custom domain](#!) <Badge variant="outline">Guide</Badge>
 - [Secure Page Builder pages](#!) <Badge variant="outline">Guide</Badge>
+
+---
+
+-->
+
+## Contributing
+
+We welcome anyone who wishes to be a part of our project and help us achieve our mission. If you're looking at code contributions, check [this link](https://github.com/webiny/webiny-js/blob/next/docs/CONTRIBUTING.md), for documentation contribution check [this one](/docs/contributing/documentation). If you want to have a chat with the dev team, you'll find us on our [community slack](https://www.webiny.com/slack).
 
 ---
 
