Intro article updates

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -16,9 +16,9 @@ Webiny is currently in a beta stage. The documentation is not yet complete. We'r
 
 <Theme>
 
-Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. (multi-cloud support coming)
+Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
 
-We believe that serverless is the future of development, but having tried ourselves building a solution by using only serverless services we saw this is a challenging task. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. When it comes to building one, the existing tools are very limited and don't handle many use-cases.
+We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes it. 
 
 You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
