--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -18,7 +18,7 @@ Webiny is currently in a beta stage. The documentation is not yet complete. We'r
 
 Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
 
-We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes it. 
+We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes in. 
 
 You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
