feat: add dev workflows articles

--- a/docs/how-to-guides/development-workflows/development.mdx
+++ b/docs/how-to-guides/development-workflows/development.mdx
@@ -6,11 +6,13 @@ keywords: ["webiny", "development", "unit", "e2e", "tests"]
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
 :::tip What you'll learn
-- one
+- what does it mean to develop serverless
 - two
 :::
 
 ## Overview
+
+
 
 - development in cloud - no local development
 
