feat: add dev workflows articles

--- a/docs/how-to-guides/development-workflows/environments.mdx
+++ b/docs/how-to-guides/development-workflows/environments.mdx
@@ -77,9 +77,8 @@ The following diagram shows the most common organization of shared and isolated 
 
 <!-- vale on -->
 
-
 :::info
-The environments shown actually mirror the branches in your Git repository. More on this in the Branching guide.
+This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Branching](/docs/how-to-guides/development-workflows/branching) guide that follows.
 :::
 
 ### Shared environments
