PB benchmark update.

--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -8,7 +8,7 @@ description: Webiny performance benchmark.
 
 :::tip What you’ll learn
 
-- structure of the benchmark
+- what was benchmarked
 - how the benchmark was done
 - how to replicate the results
 
@@ -16,17 +16,21 @@ description: Webiny performance benchmark.
 
 ## Benchmark structure
 
-Webiny has several apps and APIs. For this benchmark we decided to pick 3 actions we felt are most important:
+Webiny has several apps and APIs. For this benchmark we decided to pick 3 actions we felt are most relevant:
 
 1. Call the Headless CMS manage API and insert new data ([view results](./headless-cms-write-benchmark))
 2. Call the Headless CMS preview API and retrieve data ([view results](./headless-cms-read-benchmark))
 3. Deliver a page created by the Page Builder ([view results](./pb-deliver-a-page))
 
+The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same result can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS.
+
+The Page Builder page delivery test is used to showcase how Webiny can serve your both static and dynamic pages.
+
 ## Execution
 
 We deployed Webiny into an AWS region, in our case `eu-west-2` (London). This is the basic vanilla Webiny setup you would get if you follow our install Webiny tutorial.
 
-Then we deployed an EC2 machine in the same region to minimize the network latency. The machine instance type we used was `c5.2xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU or memory bound.
+Then we deployed an EC2 machine in the same region to minimize the network latency. This machine was used to generate the load for the test. The machine instance type we used was `c5.18xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU, memory or network bound.
 
 The machine was a base Ubuntu instance with only Java and Apache JMeter installed.
 The tests were then executed using the Apache JMeter CLI. For each of the test we are providing a `jmx` file so you can run the same tests using Apache JMeter on your end.
